client/src/index.css
@font-face {
  font-family: "fredoka_oneregular";
  src: url("./assets/fredokaone-regular-webfont.woff2") format("woff2"),
    url("./assets/fredokaone-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}
@tailwind base;
@tailwind components;
@tailwind utilities;
.no-touch canvas {
  touch-action: none;
}
@layer utilities {
  .inset-shadow {
    box-shadow: rgba(0, 0, 0, 0.2) 2px -2px 2px inset,
      rgba(255, 255, 255, 0.3) -2px 2px 2px inset;
  }
  .inset-shadow-reverse {
    box-shadow: rgba(255, 255, 255, 0.3) 2px -2px 2px inset,
      rgba(0, 0, 0, 0.2) -2px 2px 2px inset;
  }
  .safe-area-pad {
    padding-top: env(safe-area-inset-top);
    padding-right: env(safe-area-inset-right);
    padding-bottom: env(safe-area-inset-bottom);
    padding-left: env(safe-area-inset-left);
  }
  .window-drag {
    -webkit-app-region: drag;
  }
  /* .wood-light-x {
    background-image: linear-gradient(
        0deg,
        rgba(233, 200, 103, 0.3) 0%,
        rgba(242, 220, 157, 0.75) 100%
      ),
      url("./assets/seamless-wood-background-1.jpeg");
    background-repeat: repeat-x;
    background-size: 350px;
  }
  .wood-med-x {
    background-image: url("./assets/seamless-wood1.jpeg");
    background-repeat: repeat-x;
    background-size: 350px;
  }
  .wood-dark-x {
    background-image: url("./assets/texture-seamless-wood-5.jpeg");
    background-repeat: repeat-x;
    background-size: 100px;
  } */
}

body {
  @apply bg-black;
}

/* // idk, helps canvas shrink
*  https://stackoverflow.com/a/59698584
*  https://stackoverflow.com/a/36247448
*/
.flex {
  min-width: 0;
  min-height: 0;
}

:root {
  --sat: env(safe-area-inset-top);
  --sar: env(safe-area-inset-right);
  --sab: env(safe-area-inset-bottom);
  --sal: env(safe-area-inset-left);
}

.topbar {
  background: linear-gradient(
    0deg,
    rgba(233, 187, 72, 1) 0%,
    rgba(246, 197, 75, 1) 100%
  );
}

